// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse component rule 1 should parse empty props 1`] = `
"font-size: 48px;
:focus {
  width: 30px;
}"
`;

exports[`should parse component rule 2 should parse common props 1`] = `
"font-size: 48px;
height: 180px;
:focus {
  width: 30px;
}"
`;

exports[`should parse component rule 3 should parse common props for place rule props 1`] = `
"font-size: 30px;
:focus {
  width: 30px;
}"
`;

exports[`should parse component rule 4 should parse component props for palce default style  1`] = `
"font-size: 96px;
:focus {
  width: 10px;
}
&:hover {
  color: #f50057;
}"
`;

exports[`should parse component rule 5 should parse common props and component props using the order base prop>module prop > mix prop>component prop >component default style 1`] = `
"font-size: 7px;
letter-spacing: -.01562em;
line-height: 6rem;
font-weight: 300;
font-family: Roboto,Open Sans, Helvetica Neue, Helvetica,Arial, sans-serif;
text-decoration: inherit;
text-transform: inherit;
:focus {
  width: 10px;
}
&:hover {
  color: #f50057;
}"
`;

exports[`should parse component rule 5 should parse common props and component props using the order base prop>module prop > mix prop>component prop >component default style 2`] = `
"font-size: 14px;
letter-spacing: -.01562em;
line-height: 6rem;
font-weight: 300;
font-family: Roboto,Open Sans, Helvetica Neue, Helvetica,Arial, sans-serif;
text-decoration: inherit;
text-transform: inherit;
:focus {
  width: 10px;
}
&:hover {
  color: #f50057;
}"
`;

exports[`should parse component rule 5 should parse common props and component props using the order base prop>module prop > mix prop>component prop >component default style 3`] = `
"font-size: 10px;
:focus {
  width: 10px;
}
&:hover {
  color: #f50057;
}"
`;

exports[`should parse component rule 5 should parse common props and component props using the order base prop>module prop > mix prop>component prop >component default style 4`] = `
"font-size: 96px;
:focus {
  width: 10px;
}
&:hover {
  color: #f50057;
}"
`;

exports[`should parse component rule 5 should parse common props and component props using the order base prop>module prop > mix prop>component prop >component default style 5`] = `
"font-size: 48px;
:focus {
  width: 30px;
}"
`;

exports[`should parse component rule 6 should parse media props 1`] = `
"font-size: 48px;
padding: 4px;
@media screen and (max-width: 80em) {
  padding: 8px;
}
:focus {
  width: 30px;
}"
`;

exports[`should parse component rule 7 should parse media props in rule 1`] = `
"font-size: 60px;
padding: 4px;
@media screen and (max-width: 80em) {
  padding: 8px;
}
:focus {
  width: 10px;
}"
`;
